refactor/participation-service